Mon Nov  5 13:40:37 2007 CET

DataFilter v0.1011 released

Mon Nov  5 11:19:57 2007 CET
(Vend::DataFilter): stop logging of errors in upload data

Fri Nov  2 13:23:09 2007 CET

DataFilter v0.1010 released

Fri Nov  2 13:21:19 2007 CET
(DataFilter): new method unpack

Tue Oct 16 15:18:26 2007 CEST
(Magic): added big kludge for self extracting ZIP archives

Tue Oct 16 13:49:23 2007 CEST
(DataFilter): automatic type detection and unpacking of ZIP archives
(XBase): new methods rows, enum_records; default to first "table"
(Vend::DataFilter): support XBase source

Tue Oct 16 12:17:19 2007 CEST
(XBase): new methods tables, columns; recognize name parameter

Tue Oct 16 11:44:15 2007 CEST
(Magic): detection of ZIP and XBase files added